--- a/src/index.css
+++ b/src/index.css
@@ -172,8 +172,8 @@
     }
   }
   .backimagetablet {
-    background-image: url("https://thegadgetflow.com/wp-content/uploads/2025/03/ACEELE-4K-Smart-Portable-Quad-Monitor-01-min-1200x900.jpg");
-    background-position: center top;
+    background-image: url("https://eu-images.contentstack.com/v3/assets/blt6b0f74e5591baa03/blt663b59501e7e61f6/66db104592d0377bb1ad9511/Data_programmer_laptop_GettyImages-1435220822.jpg?width=1280&auto=webp&quality=95&format=jpg&disable=upscale ");
+    background-position: center center;
     background-size: cover;
   }
   @media (min-width: 1024px) {
